k3s/portfolio/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-svc
  namespace: web
spec:
  selector:
    app: portfolio
  ports:
    - name: http
      port: 80
      targetPort: 80
